--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
         <span id="wood">Wood: 0</span>
         <span id="stone">Stone: 0</span>
         <span id="food">Food: 0</span>
-        <span id="energy">Energy: 0</span>
+        <span id="energy">Energy: 3</span>
     </div>
+
+    <button onclick="chopWood()">Chop Wood</button>
+    <button onclick="gatherStone()">Gather Stone</button>
+    <button onclick="forageFood()">Forage for Food</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
