--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Resource Gathering Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Resource Gathering Game</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="resources">
-        <span id="wood">Wood: 0</span>
-        <span id="stone">Stone: 0</span>
-        <span id="food">Food: 0</span>
-        <span id="energy">Energy: 3</span>
-        <button id="newGameButton">New Game</button>
-    </div>
-    <div id="actions">
-        <button onclick="chopWood()">Chop Wood</button>
-        <button onclick="gatherStone()">Gather Stone</button>
-        <button onclick="forageFood()">Forage Food</button>
-    </div>
-    <div id="result"></div>
-    <script src="script.js"></script>
+  <h1>Resource Gathering Game</h1>
+  <div id="resources">
+    <div id="wood">Wood: 0</div>
+    <div id="stone">Stone: 0</div>
+    <div id="food">Food: 0</div>
+    <div id="energy">Energy: 3 / 10</div>
+    <div id="version">Version: 0.11</div>
+  </div>
+  <div id="actions">
+    <button onclick="chopWood()">Chop Wood</button>
+    <button onclick="gatherStone()">Gather Stone</button>
+    <button onclick="forageFood()">Forage Food</button>
+  </div>
+  <div id="result"></div>
+  <button id="newGameButton">New Game</button>
+  <script src="script.js"></script>
 </body>
 </html>
