--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Resource Gathering Game</title>
+  <title>Web-based Game</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="resources">
-    <div id="wood">Wood: 0</div>
-    <div id="stone">Stone: 0</div>
-    <div id="food">Food: 0</div>
-    <div id="energy">Energy: 3 / 10</div>
+  <div id="container">
+    <div id="resources">
+      <div class="resource">
+        <div class="icon"></div>
+        <span class="value" id="woodValue">0</span>
+      </div>
+      <br> <!-- Add line break -->
+      <div class="resource">
+        <div class="icon"></div>
+        <span class="value" id="stoneValue">0</span>
+      </div>
+      <br> <!-- Add line break -->
+      <div class="resource">
+        <div class="icon"></div>
+        <span class="value" id="foodValue">0</span>
+      </div>
+      <br> <!-- Add line break -->
+      <div class="resource">
+        <div class="icon"></div>
+        <span class="value" id="energyValue">0</span>
+      </div>
+    </div>
+    <div id="actions">
+      <button class="action-button" onclick="gatherStone()">Gather Stone</button>
+      <button class="action-button" onclick="chopWood()">Chop Wood</button>
+      <button class="action-button" onclick="forageFood()">Forage Food</button>
+    </div>
+    <div id="result"></div>
+    <div id="version">Version 0.11</div>
+    <button id="newGameButton" onclick="resetGame()">New Game</button>
   </div>
-  <div id="actions">
-    <button onclick="chopWood()">Chop Wood</button>
-    <button onclick="gatherStone()">Gather Stone</button>
-    <button onclick="forageFood()">Forage Food</button>
-  </div>
-  <div id="result"></div>
-  <div id="version">Version: 0.18</div>
-  <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
 </html>
