--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <div id="resources">
-    <div id="wood">Wood: 0</div><br>
-    <div id="stone">Stone: 0</div><br>
-    <div id="food">Food: 0</div><br>
+    <div id="wood">Wood: 0</div>&#10;
+    <div id="stone">Stone: 0</div>&#10;
+    <div id="food">Food: 0</div>&#10;
     <div id="energy">Energy: 3 / 10</div>
   </div>
   <div id="actions">
@@ -17,7 +17,7 @@
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.37</div>
+  <div id="version">Version: 0.39</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
