--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="resources">
+  <div id="resources" style="white-space: pre-wrap;">
     <div id="wood">Wood: 0</div>&#10;
     <div id="stone">Stone: 0</div>&#10;
     <div id="food">Food: 0</div>&#10;
     <div id="energy">Energy: 3 / 10</div>
   </div>
-  <div id="actions" style="white-space: pre-wrap;">
+  <div id="actions">
     <button onclick="chopWood()">Chop Wood</button>
     <button onclick="gatherStone()">Gather Stone</button>
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.41</div>
+  <div id="version">Version: 0.51</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
