--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div id="food">Food: 0</div>
     <div id="energy">Energy: 3 / 10</div>
   </div>
-  <div id="actions">
+  <div id="actions" style="white-space: pre-wrap;>
     <button onclick="chopWood()">Chop Wood</button>
     <button onclick="gatherStone()">Gather Stone</button>
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.53</div>
+  <div id="version">Version: 0.33</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
