--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 </head>
 <body>
   <div id="resources" style="white-space: pre-wrap;">
-    <div id="wood">Wood: 0</div>
-    <div id="stone">Stone: 0</div>
-    <div id="food">Food: 0</div>
-    <div id="energy">Energy: 3 / 10</div>
+    <div id="wood" style="white-space: pre-wrap;">Wood: 0</div>
+    <div id="stone" style="white-space: pre-wrap;">Stone: 0</div>
+    <div id="food" style="white-space: pre-wrap;">Food: 0</div>
+    <div id="energy" style="white-space: pre-wrap;">Energy: 3 / 10</div>
   </div>
-  <div id="actions" style="white-space: pre-wrap;>
+  <div id="actions">
     <button onclick="chopWood()">Chop Wood</button>
     <button onclick="gatherStone()">Gather Stone</button>
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.33</div>
+  <div id="version">Version: 0.13</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
