--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="resources" style="white-space: pre-wrap;">
+  <div id="resources">
     <div id="wood" style="white-space: pre-wrap;">Wood: 0</div>
     <div id="stone" style="white-space: pre-wrap;">Stone: 0</div>
     <div id="food" style="white-space: pre-wrap;">Food: 0</div>
@@ -17,7 +17,7 @@
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.13</div>
+  <div id="version">Version: 0.03</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
