--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <div id="resources">
-    <div id="wood" style="white-space: pre-wrap;">Wood: 0</div>
-    <div id="stone" style="white-space: pre-wrap;">Stone: 0</div>
-    <div id="food" style="white-space: pre-wrap;">Food: 0</div>
-    <div id="energy" style="white-space: pre-wrap;">Energy: 3 / 10</div>
+    <div id="wood">Wood: 0</div>
+    <div id="stone">Stone: 0</div>
+    <div id="food">Food: 0</div>
+    <div id="energy">Energy: 3 / 10</div>
   </div>
   <div id="actions">
     <button onclick="chopWood()">Chop Wood</button>
@@ -17,7 +17,7 @@
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.03</div>
+  <div id="version">Version: 0.01</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
