--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <div id="resources">
-    <p id="wood">Wood: 0</p>
-    <p id="stone">Stone: 0</p>
-    <p id="food">Food: 0</p>
-    <p id="energy">Energy: 3 / 10</p>
+    <div id="wood">Wood: 0</div>
+    <div id="stone">Stone: 0</div>
+    <div id="food">Food: 0</div>
+    <div id="energy">Energy: 3 / 10</div>
   </div>
   <div id="actions">
     <button onclick="chopWood()">Chop Wood</button>
@@ -17,7 +17,7 @@
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.02</div>
+  <div id="version">Version: 0.01</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
