--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Resource Gathering Game</title>
+  <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 0.01</div>
+  <div id="version">Version: 0.01111</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
