--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button onclick="forageFood()">Forage Food</button>
   </div>
   <div id="result"></div>
-  <div id="version">Version: 31</div>
+  <div id="version">Version: .3231</div>
   <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
