--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="resources">
-    <div id="wood">Wood: 0</div>
-    <div id="stone">Stone: 0</div>
-    <div id="food">Food: 0</div>
-    <div id="energy">Energy: 3 / 10</div>
+  <div id="container">
+    <div id="resources">
+      <div id="wood">Wood: 0</div>
+      <div id="stone">Stone: 0</div>
+      <div id="food">Food: 0</div>
+      <div id="energy">Energy: 3 / 10</div>
+    </div>
+    <div id="timer">Energy Regeneration: <span id="countdown">00:00:00</span></div>
+    <div id="actions">
+      <button onclick="chopWood()">Chop Wood</button>
+      <button onclick="gatherStone()">Gather Stone</button>
+      <button onclick="forageFood()">Forage Food</button>
+    </div>
+    <div id="result"></div>
+    <div id="version">Version: 13</div>
+    <button id="newGameButton">New Game</button>
   </div>
-  <div id="actions">
-    <button onclick="chopWood()">Chop Wood</button>
-    <button onclick="gatherStone()">Gather Stone</button>
-    <button onclick="forageFood()">Forage Food</button>
-  </div>
-  <div id="result"></div>
-  <div id="version">Version: 1</div>
-  <button id="newGameButton">New Game</button>
   <script src="script.js"></script>
 </body>
 </html>
