--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="stone">Stone: 0</div>
       <div id="food">Food: 0</div>
       <div id="energy">Energy: 3 / 10</div>
-      <div id="timer">Energy Regeneration: <span id="countdown">00:00:00</span></div>
+      <div id="timer"><span id="countdown">00:00:00</span></div>
     </div>
     <div id="actions">
       <button onclick="chopWood()">Chop Wood</button>
@@ -20,7 +20,7 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
     <div id="result"></div>
-    <div id="version">Version: 1</div>
+    <div id="version">Version: 2</div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
