--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
   <div id="container">
     <div id="resources">
-      <div id="wood">Wood: 0</div>
-      <div id="stone">Stone: 0</div>
-      <div id="food">Food: 0</div>
-      <div id="energy">Energy: 3 / 10</div>
-      <div id="timer"><span id="countdown">00:00:00</span></div>
-    </div>
+  <div id="wood">Wood: 0</div>
+  <div id="stone">Stone: 0</div>
+  <div id="food">Food: 0</div>
+  <div id="energy">Energy: 3 / 10</div>
+  <div id="timer">Timer: <span id="countdown">60</span> seconds</div>
+</div>
     <div id="actions">
       <button onclick="chopWood()">Chop Wood</button>
       <button onclick="gatherStone()">Gather Stone</button>
       <button onclick="forageFood()">Forage Food</button>
     </div>
     <div id="result"></div>
-    <div id="version">Version: 81</div>
+    <div id="version">Version: 8.9</div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
