--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div id="wood">Wood: 0</div>
   <div id="stone">Stone: 0</div>
   <div id="food">Food: 0</div>
-  <div id="energy">Energy: 3 / 10</div>
-  <div id="timer">Timer: <span id="countdown">59</span> seconds</div>
+  <div id="energy">Energy: 3 / 10 <div id="timer"><span id="countdown">59</span> s</div> </div>
+  
 </div>
     <div id="actions">
       <button onclick="chopWood()">Chop Wood</button>
@@ -20,7 +20,7 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
     <div id="result"></div>
-    <div id="version">Version: 420 69</div>
+    <div id="version">Version: 421 69.5</div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
