--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
     <div id="result"></div>
-    <div id="version">Version: bottom 1</div>
+    <div id="version">Version: maybe learning</div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
