--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
   <div id="container">
-    <div id="resources">
-  <div id="wood">Wood: 0</div>
-  <div id="stone">Stone: 0</div>
-  <div id="food">Food: 0</div>
-  <div id="energy">Energy: 3 / 10</div>
-  <div id="timer"><span id="countdown">60</span> s</div> 
+  <div id="resources">
+    <div id="wood">Wood: 0 / 100</div>
+    <div id="stone">Stone: 0 / 100</div>
+    <div id="food">Food: 0 / 50</div>
+    <div id="energy">Energy: 3 / 10</div>
+    <div id="timer"><span id="countdown">60</span> s</div> 
+  </div>
 </div>
     <div id="actions">
       <button onclick="chopWood()">Chop Wood</button>
