--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
     <div id="result"></div>
-    <div id="version">Version: color+bg?</div>
+    <div id="version">Version: bold result message</div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
