--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <button onclick="gatherStone()">Gather Stone</button>
       <button onclick="forageFood()">Forage Food</button>
     </div>
-    <div id="result"></div>
-    <div id="version">Version: bueller?<div>
+    <div id="Result"></div>
+    <div id="version">Version: Cap R<div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
