--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button onclick="gatherStone()">Gather Stone</button>
       <button onclick="forageFood()">Forage Food</button>
     </div>
-    <div id="result"></div>
+    <div id="Result"></div>
     <div id="version">Version: lower r<div>
     <button id="newGameButton">New Game</button>
   </div>
