--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
     <div id="Result"></div>
-    <div id="version">Version: lower r<div>
+    <div id="version">Version: Result<div>
     <button id="newGameButton">New Game</button>
   </div>
   <script src="script.js"></script>
