--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
       <div id="energy">Energy: 3 / 10</div>
       <div id="timer"><span id="countdown">60</span> s</div> 
     </div>
+
+    <div id="actions">
+      <button onclick="chopWood()">Chop Wood</button>
+      <button onclick="gatherStone()">Gather Stone</button>
+      <button onclick="forageFood()">Forage Food</button>
+    </div>
+
+    <div id="resultContainer"></div>
+
+    <div id="version">Version: maybe probably not</div>
+    <button id="newGameButton">New Game</button>
   </div>
-  <div id="actions">
-    <button onclick="chopWood()">Chop Wood</button>
-    <button onclick="gatherStone()">Gather Stone</button>
-    <button onclick="forageFood()">Forage Food</button>
-  </div>
-  <div id="result"></div>
-  <div id="version">Version: codeblue</div>
-  <button id="newGameButton">New Game</button>
+
   <script src="script.js"></script>
 </body>
 </html>
