--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="resultContainer"></div>
 
-    <div id="version">Version: maybe probably not</div>
+    <div id="version">Version: chasing a robot</div>
     <button id="newGameButton">New Game</button>
   </div>
 
