--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     </div>
 
     <div id="resultContainer"></div>
+<!-- Other HTML code... -->
+
+<div id="result"></div>
+
+<!-- Other HTML code... -->
 
     <div id="version">Version: bedtime holenewworld</div>
     <button id="newGameButton">New Game</button>
