--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: java backup notepad</div>
+    <div id="version">Version: pumpthisshitup</div>
     <button id="newGameButton">New Game</button>
   </div>
 
