--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: max-value + excess-rng + rng css class</div>
+    <div id="version">Version: result background and resource mod</div>
     <button id="newGameButton">New Game</button>
   </div>
 
