--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: removed background color in javascript for result</div>
+    <div id="version">Version: fix background of result message</div>
     <button id="newGameButton">New Game</button>
   </div>
 
