--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: max value + excess value text color white jvscrpt</div>
+    <div id="version">Version: no padding</div>
     <button id="newGameButton">New Game</button>
   </div>
 
