--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
 <body>
   <div id="container">
     <div id="resources">
-  <div id="wood">Wood: 0</div>
-  <div id="stone">Stone: 0</div>
-  <div id="food">Food: 0</div>
-  <div id="energy">Energy: 3 / 10</div>
-  <div id="timer"><span id="countdown">60</span> s</div> 
-</div>
+      <div id="wood">Wood: 0 / 100</div>
+      <div id="stone">Stone: 0 / 100</div>
+      <div id="food">Food: 0 / 50</div>
+      <div id="energy">Energy: 3 / 10</div>
+      <div id="timer"><span id="countdown">60</span> s</div> 
+    </div>
+
     <div id="actions">
       <button onclick="chopWood()">Chop Wood</button>
       <button onclick="gatherStone()">Gather Stone</button>
       <button onclick="forageFood()">Forage Food</button>
     </div>
-    <div id="result"></div>
-    <div id="version">Version: code red!</div>
+
+    <div id="resultContainer"></div>
+<!-- Other HTML code... -->
+
+<div id="result"></div>
+
+<!-- Other HTML code... -->
+
+    <div id="version">Version: display: inline-block on css result class</div>
     <button id="newGameButton">New Game</button>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
