--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: more customfont+ spacing</div>
+    <div id="version">Version: remove bold on result messages</div>
     <button id="newGameButton">New Game</button>
   </div>
 
