--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: bottom 20px</div>
+    <div id="version">Version: energy margin bottom 20</div>
     <button id="newGameButton">New Game</button>
   </div>
 
