--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- Other HTML code... -->
 
-    <div id="version">Version: flip it and reverse the padding</div>
+    <div id="version">Version: 2px 8px padding</div>
     <button id="newGameButton">New Game</button>
   </div>
 
