--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <!-- Other HTML code... -->
 
-      <div id="version">Version: enter yo name</div>
+      <div id="version">Version: name yoself</div>
       <button id="newGameButton">New Game</button>
     </div>
   </div>
