--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div id="resultContainer"></div>
       <div id="result"></div>
 
-      <div id="version">Version: enter your name shit</div>
+      <div id="version">Version: add name at game start</div>
       <button id="newGameButton">New Game</button>
     </div>
   </div>
