--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+ <div id="gameContent">
   <div id="container">
     <div id="gameStart">
       <div>
@@ -37,7 +38,7 @@
       <button id="newGameButton">New Game</button>
     </div>
   </div>
-
+</div>
   <script src="script.js"></script>
 </body>
 </html>
