--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       </div>
       <button id="startButton">Start Game</button>
     </div>
-<div id="gameContent">
-    <div id="gamePlay" style="display: none;">
+    <div id="gameContent" style="display: none;">
       <div id="resources">
         <div id="wood">Wood: 0 / 100</div>
         <div id="stone">Stone: 0 / 100</div>
@@ -37,7 +36,7 @@
       <button id="newGameButton">New Game</button>
     </div>
   </div>
-</div>
+
   <script src="script.js"></script>
 </body>
 </html>
