--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <button id="newGameButton">New Game</button>
     </div>
   </div>
+  <div id="version">Version: APPologies 2.0</div>
+      <button id="newGameButton">New Game</button>
 
   <script src="script.js"></script>
 </body>
