--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="resultContainer"></div>
       <div id="result"></div>
 
-      <div id="version">Version: APPologies 2.0</div>
+      <div id="version">Version: no mad</div>
       <button id="newGameButton">New Game</button>
     </div>
   </div>
