--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id="result"></div>
     </div>
   </div>
-  <div id="version">Version: no mad</div>
+  <div id="version">Version: adjust name</div>
       <button id="newGameButton">New Game</button>
 
   <script src="script.js"></script>
