--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
       <button id="startButton">Start Game</button>
     </div>
     <div id="gameContent" style="display: none;">
-      <div id="playerContainer" style="display: none;">
-        <div id="playerName"></div>
-        <div id="gameVersion"></div>
+      <div id="infoContainer">
+        <div id="version">Version: adjust name</div>
+        <div id="playerContainer" style="display: none;">
+          <div id="playerName"></div>
+        </div>
+        <button id="newGameButton">New Game</button>
       </div>
 
       <div id="resources">
@@ -38,8 +41,6 @@
       <div id="result"></div>
     </div>
   </div>
-  <div id="version">Version: adjust name</div>
-      <button id="newGameButton">New Game</button>
 
   <script src="script.js"></script>
 </body>
