--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="gameContent" style="display: none;">
       <div id="infoContainer">
-        <div id="version">Version: adjust name</div>
+        <div id="version">Version: newest and truest</div>
         <div id="playerContainer" style="display: none;">
           <div id="playerName"></div>
         </div>
