--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <div id="result"></div>
     </div>
   </div>
-  <div id="version" style="display: none;">Version: gotdang chillis</div> <!-- Added display: none; -->
-  <button id="newGameButton" style="display: none;">New Game</button> <!-- Added display: none; -->
+  <div id="version">Version: gotdang chillis</div> <!-- Added display: none; -->
+  <button id="newGameButton">New Game</button> <!-- Added display: none; -->
 
   <script src="script.js"></script>
 </body>
