--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id="result"></div>
     </div>
   </div>
-  <div id="version">Version: background attempt</div> <!-- Added display: none; -->
+  <div id="version">Version: dis gon b hardt</div> <!-- Added display: none; -->
   <button id="newGameButton">New Game</button> <!-- Added display: none; -->
 
   <script src="script.js"></script>
