--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="gameContent" style="display: none;">
       <div id="playerContainer" style="display: none;">
         <div id="playerName"></div>
-        <div id="gameVersion" style="display: none;"></div> <!-- Added display: none; -->
+        <div id="gameVersion" style="display: none;"></div>
       </div>
 
       <div id="resources">
@@ -38,8 +38,13 @@
       <div id="result"></div>
     </div>
   </div>
-  <div id="version">Version: dis gon b hardt</div> <!-- Added display: none; -->
-  <button id="newGameButton">New Game</button> <!-- Added display: none; -->
+  <div id="gamedatadetails">
+    <div id="version">Version: dis gon b hardt</div>
+    <button id="newGameButton">New Game</button>
+    <div id="playerContainer" style="display: none;">
+      <div id="playerName"></div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
