--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div id="gamedatadetails">
-    <div id="version">Version: gay</div>
+    <div id="version">Version: coketime</div>
     <button id="newGameButton">New Game</button>
     <div id="playerContainer" style="display: none;">
       <div id="playerName"></div>
