--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </div>
   </div>
   <div id="gamedatadetails">
-    <div id="version">Version: coketime</div>
+    <div id="version">Version: player:</div>
     <button id="newGameButton">New Game</button>
-    <div id="playerContainer" style="display: none;">
-      <div id="playerName"></div>
+    <div id="playerContainer">
+      <div id="playerName">Player:</div>
     </div>
   </div>
 
