--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div id="gamedatadetails">
-    <div id="version">Version: player:</div>
+    <div id="version">Version: player: display</div>
     <button id="newGameButton">New Game</button>
     <div id="playerContainer">
       <div id="playerName">Player:</div>
