--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
       </div>
       <button id="startButton">Start Game</button>
     </div>
-    <div id="gameContent" style="display: none;">
-      <div id="playerContainer" style="display: none;">
-        <div id="playerName"></div>
-        <div id="gameVersion" style="display: none;"></div>
-      </div>
-
+    
       <div id="resources">
         <div id="wood">Wood: 0 / 100</div>
         <div id="stone">Stone: 0 / 100</div>
@@ -39,7 +34,7 @@
     </div>
   </div>
   <div id="gamedatadetails">
-    <div id="version">Version: player: display</div>
+    <div id="version">Version: player: hope</div>
     <button id="newGameButton">New Game</button>
     <div id="playerContainer">
       <div id="playerName">Player:</div>
