--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div id="gamedatadetails">
-    <div id="version">Version: player: hope</div>
+    <div id="version">Version: 1.1</div>
     <button id="newGameButton">New Game</button>
     <div id="playerContainer">
       <div id="playerName">Player:</div>
