--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="version">Version: 1.1</div>
     <button id="newGameButton">New Game</button>
     <div id="playerContainer">
-      <div id="playerName">Player:</div>
+      <div id="playerName">Player: (enter name)</div>
     </div>
   </div>
 
