--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </div>
 
   <div id="gamedatadetails">
-    <div id="version">Version: 1.8</div>
-    <button id="newGameButton">New Game</button>
+    <div id="version">Version: 38</div>
+    <button id="newGameButton" style="display: none;">New Game</button>
     <div id="playerContainer" style="display: none;">
       <div id="playerName">Player: (enter name)</div>
     </div>
