--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
 
     <div id="resultContainer">
-   <div id="result"></div></div>
+   <div id="result"></div>
   </div>
 
   <div id="gamedatadetails">
-    <div id="version">Version: doublediv</div>
+    <div id="version">Version: uno de div</div>
     <button id="newGameButton" style="display: none;">New Game</button>
     <div id="playerContainer" style="display: none;">
       <div id="playerName">Player: (enter name)</div>
