--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <div id="gamedatadetails">
-    <div id="version">Version: cango</div>
+    <div id="version">Version: old ham</div>
     <button id="newGameButton" style="display: none;">New Game</button>
     <div id="playerContainer" style="display: none;">
       <div id="playerName">Player: (enter name)</div>
