--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
     </div>
 
     <div id="resultContainer">
-   <div id="result"></div>
-  </div>
+      <div id="result"></div>
+    </div>
 
-  <div id="gamedatadetails">
-    <div id="version">Version: bangarang</div>
-    <button id="newGameButton" style="display: none;">New Game</button>
-    <div id="playerContainer" style="display: none;">
-      <div id="playerName">Player: (enter name)</div>
+    <div id="gamedatadetails">
+      <div id="version">Version: cheeto</div>
+      <button id="newGameButton" style="display: none;">New Game</button>
+      <div id="playerContainer" style="display: none;">
+        <div id="playerName">Player: (enter name)</div>
+      </div>
     </div>
   </div>
 
