--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <label for="name">Enter your name:</label>
         <input type="text" id="name">
       </div>
-      <button id="startGameButton">Start Game</button>
+      <button id="startButton">Start Game</button>
     </div>
     
     <div id="resources" style="display: none;">
