--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
 
     <div id="actions" style="display: none;">
-      <button onclick="chopWood()">Chop Wood</button>
-      <button onclick="gatherStone()">Gather Stone</button>
-      <button onclick="forageFood()">Forage Food</button>
+      <button onclick="chopWoodButton()">Chop Wood</button>
+      <button onclick="gatherStoneButton()">Gather Stone</button>
+      <button onclick="forageFoodButton()">Forage Food</button>
     </div>
 
     <div id="resultContainer">
