--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
 
     <div id="actions" style="display: none;">
-      <button onclick="chopWoodButton()">Chop Wood</button>
-      <button onclick="gatherStoneButton()">Gather Stone</button>
-      <button onclick="forageFoodButton()">Forage Food</button>
+      <button onclick="chopWood()">Chop Wood</button>
+      <button onclick="gatherStone()">Gather Stone</button>
+      <button onclick="forageFood()">Forage Food</button>
     </div>
 
     <div id="resultContainer">
@@ -34,7 +34,7 @@
     </div>
 
     <div id="gamedatadetails">
-      <div id="version">Version: buttonnamechange</div>
+      <div id="version">Version: back 2 steps</div>
       <button id="newGameButton" style="display: none;">New Game</button>
       <div id="playerContainer" style="display: none;">
         <div id="playerName">Player: (enter name)</div>
