--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div id="gamedatadetails">
-      <div id="version">Version: back 2 steps</div>
+      <div id="version">Version: got your no's</div>
       <button id="newGameButton" style="display: none;">New Game</button>
       <div id="playerContainer" style="display: none;">
         <div id="playerName">Player: (enter name)</div>
