--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
 
-    <div id="resultContainer">
-      <div id="result"></div>
+    <div id="resultContainer" class="show">
+  <div id="result"></div>
     </div>
 
     <div id="gamedatadetails">
