--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
 
     <div id="gamedatadetails">
-      <div id="version">Version: billionth</div>
-      <button id="newGameButton" style="display: none;">New Game</button>
+      <div id="version">Version: billionth and 1</div>      
       <div id="playerContainer" style="display: none;">
+        <button id="newGameButton" style="display: none;">New Game</button>
         <div id="playerName">Player: (enter name)</div>
       </div>
     </div>
