--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       <button onclick="forageFood()">Forage Food</button>
     </div>
 
-    <div id="resultContainer" class="show">
+    <div class="resultContainer" id="resultContainer">
   <div id="result"></div>
-    </div>
+</div>
+
 
     <div id="gamedatadetails">
       <div id="version">Version: 2</div>      
