--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <div id="gamedatadetails">
-      <div id="version">Version: sing and a?</div>      
+      <div id="version">Version: hail mary backup if it works</div>      
       <div id="playerContainer" style="display: none;">        
         <div id="playerName">Player: (enter name)</div>
         <button id="newGameButton" style="display: none;">New Game</button>
