--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <div id="gamedatadetails">
-      <div id="version">Version: doubtful script</div>      
+      <div id="version">Version: unlikely</div>      
       <div id="playerContainer" style="display: none;">        
         <div id="playerName">Player: (enter name)</div>
         <button id="newGameButton" style="display: none;">New Game</button>
