--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
 
     <div id="actions" style="display: none;">
-      <button onclick="chopWood()">Chop Wood</button>
-      <button onclick="gatherStone()">Gather Stone</button>
-      <button onclick="forageFood()">Forage Food</button>
+      <button id="chopWood">Chop Wood</button>
+      <button id="gatherStone">Gather Stone</button>
+      <button id="forageFood">Forage Food</button>
     </div>
 
     <div class="resultContainer" id="resultContainer">
@@ -35,7 +35,7 @@
 
 
     <div id="gamedatadetails">
-      <div id="version">Version: # instead of .</div>      
+      <div id="version">Version: waste o time</div>      
       <div id="playerContainer" style="display: none;">        
         <div id="playerName">Player: (enter name)</div>
         <button id="newGameButton" style="display: none;">New Game</button>
