--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div id="gamedatadetails">
-      <div id="version">Version: inthehead</div>      
+      <div id="version">Version: consolemsg</div>      
       <div id="playerContainer" style="display: none;">        
         <div id="playerName">Player: (enter name)</div>
         <button id="newGameButton" style="display: none;">New Game</button>
